--- a/AppLogin/Resumen.xaml
+++ b/AppLogin/Resumen.xaml
@@ -4,9 +4,17 @@
              x:Class="AppLogin.Resumen">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Frame BackgroundColor="#2196F3" Padding="10" CornerRadius="0"  >
+                <Label Text="Resumen" HorizontalTextAlignment="Center" TextColor="White" FontSize="25"/>
+            </Frame>
+            <Label Text="Usuario conectado: " />
+            <Label Text="" x:Name="lblUsuario" FontSize="20" />
+            <Label Text="---------------------------------------" />
+            <Label Text="Nombre Estudiante" />
+            <Label Text="" x:Name="lblEstudiante" FontSize="20"/>
+            <Label Text="---------------------------------------" />
+            <Label Text="Total a Pagar" />
+            <Label Text="" x:Name="lblPagar" FontSize="20"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
